welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:22: error: not found: value avancer
	avancer();
        ^